_sass/screen.scss
/* ... */
ul.posts li,  h3.post-header-description{
  line-height: 1.5em;
  text-align: left;
}

ul.posts span {
  color: $darkest-main-color;
  font-size: 85%;
}

/*****************************************************************************/
/*
/* Site
/*
/*****************************************************************************/

.site {
  font-size: 115%;
  text-align: justify;
  width: 42em;
  margin: 3em auto 2em;
  line-height: 1.5em;

  .meta {
    color: lighten($darkest-main-color, 50%);
  }

  .header {
    a {
      font-weight: bold;
      text-decoration: none;
    }

    h1.title {
      display: inline-block;
      margin-bottom: 2em;

      a {
        color: $text-highlights;
      }

      a:hover {
        color: $darkest-main-color;
      }

      a.extra {
        color: lighten($darkest-main-color, 50%);
        margin-left: 1em;
      }

      a.extra:hover {
        color: $darkest-main-color;
      }
    }
  }
}

/*****************************************************************************/
/*
/* Posts
/*
/*****************************************************************************/

.post pre {
  border: 1px solid lighten($darkest-main-color, 70%);
  background-color: lighten($light-header-background, 10%);
  padding: 0 .4em;
}

.post ul, .post ol {
  margin-left: 1.35em;
}

.post code {
  border: 1px solid lighten($darkest-main-color, 70%);
  background-color: lighten($light-header-background, 10%);
  padding: 0 .2em;
}

.post pre code {
  border: none;
}

.post pre.terminal {
  border: 1px solid $darkest-main-color;
  background-color: darken($darkest-main-color, 20%);
  color: $light-text-color;
}

.post pre.terminal code {
  background-color: darken($darkest-main-color, 20%);
}

.page-container h1 {
  margin: 0;
  font-family: 'Dosis', sans-serif;
}

.post-date {
  margin-left: 10px;
  font-size: 80%;
}

.post, .back-to-index, .page-container {
  a, a:visited {
    color: $darker-main-color;
  }

  a:hover {
    color: lighten($darker-main-color, 30);
  }
}

.back-to-index {
  float: right;
  margin-top: 50px;
}

.project-image-container, .project-image-container-centralized {
  text-align: center;
  margin-bottom: 40px;
  width: 80%;
}

.project-image-container-centralized-single-image {
  text-align: center;
  margin: 0 auto;
  width:24.621%;
}

.project-image-container-hero {
  text-align: center;
  margin-bottom: 40px;
  width: 100%;
}

.project-image-container {
  display: -webkit-flex;
}

.project-image-container-centralized {
  margin: 0 auto;
}

.project-image {
  box-shadow: 0 15px 10px -10px rgba(0, 0, 0, 0.5), 0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
  width: 95%;
}

#project-content {
  line-height: 1.643em;

  h2 {
    font-size: 1.857em;
  }
}

figcaption {
  margin-top: 5px;
  font-size: smaller;
  font-style: italic;
}

.project-summary {
  background-color: darken($light-header-background, 5%);
  padding: 15px 15px 5px 15px;
  margin-bottom: 20px;
}

.category-description {
  font-family: 'Dosis', sans-serif;
  font-weight: bold;
  margin-right: 5px;
  color: $main-color;
}

/* Zalando project image rows */
.image-row-3 {
  display: flex;
  justify-content: center;
  align-items: flex-start;
  gap: 2em;
  margin: 2em auto;
  width: 100%;
}
.image-row-3 .project-image {
  width: 80%;
}
.image-row-2 {
  display: flex;
  justify-content: flex-start;
  align-items: flex-start;
  gap: 2em;
  margin: 2em auto;
  width: 100%;
}
.image-row-2 .project-image {
  width: 53.5%;
}
.image-row-2 .left-img {
  text-align: right;
  padding-right: 2em;
}
.image-row-2 .right-img {
  text-align: left;
  padding-left: 2em;
}
.project-image-hero {
  width: 100%;
}
.project-image-single {
  width: 50%;
  display: block;
  margin: 0 auto;
}

/*****************************************************************************/
/*
/* Custom
/*
/*****************************************************************************/

body {
  overflow-y: scroll;
  overflow-x: hidden;
  height: fit-content;
}

header {
  position: sticky;
  top: 0;
  z-index: 9999;
  padding-bottom: 20px;
  /*background-color: $light-header-background;*/
  text-align: center;

  .logo img {
    height: 6em;
    max-width: none;
    -webkit-transition-duration: 1s;
    transition-duration: 1s;

    &:hover {
      opacity: 0.6;
      filter: alpha(opacity=40);
      -webkit-transition-duration: 1s;
      transition-duration: 1s;
    }
  }

  @media only screen and (max-width: 600px) {
    .logo img {
      min-height: 4em;
      max-width: none;
      transition: 0.75s;
    }
  }

  h1.logo {
    margin: 0;
    text-align: left;
    font-family: 'Dosis', sans-serif;
    font-size: 150%;
    margin-top: 16px;

    span.full-name {
      background-color: $main-color;
      padding: 10px 20px;
    }

    span.full-name a {
      color: white;
    }
  }
}

.main {
  max-height: 90%;
  margin-bottom: -38px;
}

.menu {
  margin-top: 22px;
}

.selected-item {
  border-bottom: 4px solid $main-color;
}

ul.menu {
  text-align: right;
  li {
    color: $darkest-main-color;
    text-decoration: none;
    display: inline;
    margin: 0 15px;

    a {
      font-size: 110%;
    }
  }
}
/* ... */

